# notebooks

./: .env.exmaple  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
data/: multi_price.csv  product.csv  symbol_sector.csv  updated_서울시 나눔카 거점리스트 정보.xlsx  updated_서울시_나눔카_거점리스트_정보.csv  updated_서울시_나눔카_거점리스트_정보.json  updated_서울시_나눔카_거점리스트_정보.xlsx  서울시 나눔카 거점리스트 정보.csv  서울시 나눔카 거점리스트 정보.json  서울시 나눔카 거점리스트 정보.xlsx
data/naver_finance/: 2015_12.csv  2016_12.csv  2017_12.csv  2018_12.csv  2019_12.csv
data_analysis/: pandas_marathon.ipynb  pandas_practice.ipynb  pandas_with_finance.ipynb  pandas_with_finance01.ipynb  pandas_with_finance02.ipynb  pandas_with_finance03.ipynb  등록인구_20250403110803.xlsx
graph/: basic_graph.ipynb  diverse_graph_example.ipynb
helper/: notebook_parser.ipynb  notion_converter.ipynb
machine_learning/: classification.ipynb  linear_regression.ipynb  linear_regression01.ipynb  recommendation_system.ipynb  time_series_data.ipynb  unsupervised_learning.ipynb
math/: probability_distribution.ipynb  statistics.ipynb  vector.ipynb
