[project]
name = "notebooks"
version = "0.1.0"
description = ""
authors = [
    {name = "yuiyeong", email = "joyuiyeong@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "selenium (>=4.30.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "notion-client (>=2.3.0,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "notion2md (>=2.9.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "markdownify (>=1.1.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pre-commit = "^4.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
